8321939: [GenShen] ShenandoahOldEvacRatioPercent=100 fails with divide-by-zero

Reviewed-by: kdnilsen