src/hotspot/share/gc/shenandoah/shenandoah_globals.hpp
@@ -411,13 +411,13 @@
           "runs out of memory too early.")                                  \
                                                                             \
   product(uintx, ShenandoahOldEvacRatioPercent, 75, EXPERIMENTAL,           \
-          "The maximum proportion of evacuation from old-gen memory, as "   \
-          "a percent ratio.  The default value 75 denotes that no more "    \
-          "than 75% of the collection set evacuation "                      \
-          "workload may be evacuate to old-gen heap regions.  This limits " \
-          "both the promotion of aged regions and the compaction of "       \
-          "existing old regions.  A value of 75 denotes that the normal "   \
-          "young-gen evacuation is increased by up to four fold. "          \
+          "The maximum proportion of evacuation from old-gen memory, "      \
+          "expressed as a percentage. The default value 75 denotes that no" \
+          "more than 75% of the collection set evacuation workload may be " \
+          "towards evacuation of old-gen heap regions. This limits both the"\
+          "promotion of aged regions and the compaction of existing old "   \
+          "regions.  A value of 75 denotes that the total evacuation work"  \
+          "may increase to up to four times the young gen evacuation work." \
           "A larger value allows quicker promotion and allows"              \
           "a smaller number of mixed evacuations to process "               \
           "the entire list of old-gen collection candidates at the cost "   \
